--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -14,3 +14,30 @@ body {
     font-size: 16px;
   }
 }
+
+.app-wrapper {
+  width: 100%;
+  min-width: 375px;
+  min-height: 100vh;
+  background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 20px;
+  position: relative;
+}
+
+.header {
+  width: 100%;
+  padding: 20px;
+  text-align: center;
+}
+
+.container {
+  max-width: 1000px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
